--- a/index.html
+++ b/index.html
@@ -93,13 +93,8 @@
               <!-- Begin Profile -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-<<<<<<< HEAD
-                  <img width="304" height="304" class="prof-image" src="img/students/avatar.jpg" class="attachment-blog-thumb wp-post-image">
-=======
-                  <img width="304" height="304" class="prof-image" src="img/students/marty_mcfly_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="doc brown">
->>>>>>> marty-mcfly
+                  <img width="304" height="304" class="prof-image" src="img/students/marty_mcfly_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="marty mcfly">
                 </div>
-
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>Marty McFly</h3>
